# EdgeViewUI

./: CMakeLists.txt  README.md
android/: AndroidManifest.xml
darwin/: Info.plist
include/: About.hpp  Alarm.hpp  ApplicationMenu.hpp  ApplicationTheme.hpp  Area.hpp  Asset.hpp  Configuration.hpp  Controller.hpp  Device.hpp  EdgeApplication.hpp  EdgeView.hpp  Enterprise.hpp  Role.hpp  Rule.hpp  Site.hpp  Telemetry.hpp  User.hpp
resources/desktop/: EdgeViewUI.qrc
resources/desktop/qml/: About.qml  ActionBar.qml  Alarms.qml  Applications.qml  Areas.qml  Assets.qml  CircularProgressBar.qml  Configuration.qml  CustomButton.qml  CustomCard.qml  CustomMenuItem.qml  CustomRoundButton.qml  CustomScrollBar.qml  CustomTable.qml  DeviceForm.qml  Devices.qml  DownIndicator.qml  Enterprises.qml  Header.qml  Home.qml  MainWindow.qml  NavigationBar.qml  Rules.qml  Sites.qml  Telemetry.qml  UpIndicator.qml  Users.qml
resources/mobile/: EdgeViewUI.qrc
resources/mobile/qml/: ConnectionTest.qml  Header.qml  Home.qml  MainWindow.qml  ScanningTest.qml  Trace.qml
src/: About.cpp  Alarm.cpp  Area.cpp  Asset.cpp  Configuration.cpp  Controller.cpp  ControllerAppMgmt.cpp  ControllerComm.cpp  Device.cpp  EdgeApplication.cpp  EdgeView.cpp  Enterprise.cpp  Role.cpp  Rule.cpp  Site.cpp  Telemetry.cpp  User.cpp  main.cpp
